fixed naming inconsistency for category/indicator IDs

--- a/src/jupyter/PopulateDatabase.ipynb
+++ b/src/jupyter/PopulateDatabase.ipynb
@@ -31,11 +31,11 @@
    "id": "92716416-e32a-4944-9af2-23b9ac53d576",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-07T12:57:28.847022Z",
-     "iopub.status.busy": "2023-02-07T12:57:28.846826Z",
-     "iopub.status.idle": "2023-02-07T12:57:29.229003Z",
-     "shell.execute_reply": "2023-02-07T12:57:29.228408Z",
-     "shell.execute_reply.started": "2023-02-07T12:57:28.846981Z"
+     "iopub.execute_input": "2023-02-09T14:45:11.280105Z",
+     "iopub.status.busy": "2023-02-09T14:45:11.279757Z",
+     "iopub.status.idle": "2023-02-09T14:45:11.653072Z",
+     "shell.execute_reply": "2023-02-09T14:45:11.652280Z",
+     "shell.execute_reply.started": "2023-02-09T14:45:11.280056Z"
     },
     "tags": []
    },
@@ -46,15 +46,15 @@
      "text": [
       "Welcome to flowkit-ui-backend!\n",
       "{\n",
-      "    \"datetime\": \"2023-02-07T12:57:29.224885+00:00\",\n",
-      "    \"docker_image\": \"flowminder/flowkit-ui-backend:6bded4a\",\n",
-      "    \"git_branch\": \"main\",\n",
-      "    \"git_commit\": \"6bded4a\",\n",
+      "    \"datetime\": \"2023-02-09T14:45:11.648154+00:00\",\n",
+      "    \"docker_image\": \"flowminder/flowkit-ui-backend:02743dc\",\n",
+      "    \"git_branch\": \"feature-auto-ingestion\",\n",
+      "    \"git_commit\": \"02743dc\",\n",
       "    \"git_tag\": null,\n",
       "    \"python_package\": \"flowkit-ui-backend\",\n",
       "    \"python_version\": \"3.9.15\",\n",
-      "    \"api_version_url_appendix\": \"v1\",\n",
-      "    \"api_version\": \"1.2.1\"\n",
+      "    \"api_version\": \"1.2.1\",\n",
+      "    \"api_version_url_appendix\": \"v1\"\n",
       "}\n"
      ]
     }
@@ -116,11 +116,11 @@
    "id": "fc4b2bfe-8ec6-4d6e-80d8-d1a047d0a185",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-07T12:57:29.230129Z",
-     "iopub.status.busy": "2023-02-07T12:57:29.229796Z",
-     "iopub.status.idle": "2023-02-07T12:57:29.997205Z",
-     "shell.execute_reply": "2023-02-07T12:57:29.996620Z",
-     "shell.execute_reply.started": "2023-02-07T12:57:29.230106Z"
+     "iopub.execute_input": "2023-02-09T14:45:11.654357Z",
+     "iopub.status.busy": "2023-02-09T14:45:11.653666Z",
+     "iopub.status.idle": "2023-02-09T14:45:12.390798Z",
+     "shell.execute_reply": "2023-02-09T14:45:12.390097Z",
+     "shell.execute_reply.started": "2023-02-09T14:45:11.654324Z"
     },
     "tags": []
    },
@@ -169,11 +169,11 @@
    "id": "19a726e7-34fc-4625-890c-4ab07e76c638",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-07T12:57:29.998008Z",
-     "iopub.status.busy": "2023-02-07T12:57:29.997853Z",
-     "iopub.status.idle": "2023-02-07T12:57:30.251100Z",
-     "shell.execute_reply": "2023-02-07T12:57:30.249916Z",
-     "shell.execute_reply.started": "2023-02-07T12:57:29.997995Z"
+     "iopub.execute_input": "2023-02-09T14:45:12.392145Z",
+     "iopub.status.busy": "2023-02-09T14:45:12.391820Z",
+     "iopub.status.idle": "2023-02-09T14:45:12.745898Z",
+     "shell.execute_reply": "2023-02-09T14:45:12.745331Z",
+     "shell.execute_reply.started": "2023-02-09T14:45:12.392115Z"
     },
     "tags": []
    },
@@ -222,11 +222,11 @@
    "id": "5de63f9f-22e7-430a-9865-b0eb69dd3a23",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-07T12:57:30.253256Z",
-     "iopub.status.busy": "2023-02-07T12:57:30.252969Z",
-     "iopub.status.idle": "2023-02-07T12:57:32.490509Z",
-     "shell.execute_reply": "2023-02-07T12:57:32.489948Z",
-     "shell.execute_reply.started": "2023-02-07T12:57:30.253231Z"
+     "iopub.execute_input": "2023-02-09T14:45:12.747455Z",
+     "iopub.status.busy": "2023-02-09T14:45:12.747196Z",
+     "iopub.status.idle": "2023-02-09T14:45:15.122933Z",
+     "shell.execute_reply": "2023-02-09T14:45:15.122244Z",
+     "shell.execute_reply.started": "2023-02-09T14:45:12.747438Z"
     },
     "tags": []
    },
@@ -273,11 +273,11 @@
    "id": "a3971755-2d36-44c4-a36a-f2d612fd2642",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-07T12:57:32.491575Z",
-     "iopub.status.busy": "2023-02-07T12:57:32.491295Z",
-     "iopub.status.idle": "2023-02-07T12:57:32.508720Z",
-     "shell.execute_reply": "2023-02-07T12:57:32.508129Z",
-     "shell.execute_reply.started": "2023-02-07T12:57:32.491553Z"
+     "iopub.execute_input": "2023-02-09T14:45:15.123983Z",
+     "iopub.status.busy": "2023-02-09T14:45:15.123669Z",
+     "iopub.status.idle": "2023-02-09T14:45:15.140928Z",
+     "shell.execute_reply": "2023-02-09T14:45:15.140347Z",
+     "shell.execute_reply.started": "2023-02-09T14:45:15.123965Z"
     },
     "tags": []
    },
@@ -309,7 +309,7 @@
       "            \"description_fr\": \"Les indicateurs relatifs au changement de r\\u00e9sidence d\\u00e9crivent les variations (mensuelles) \\u00e0 long terme du nombre de personnes qui changent de lieu de r\\u00e9sidence entre des paires de zones.\"\n",
       "        },\n",
       "        {\n",
-      "            \"category_id\": \"visitors\",\n",
+      "            \"category_id\": \"presence\",\n",
       "            \"type\": \"single_location\",\n",
       "            \"order\": 3,\n",
       "            \"flowgeek_url\": \"https://www.flowgeek.org/methods/calculating-mobility-indicators/presence-indicators/\",\n",
@@ -319,7 +319,7 @@
       "            \"description_fr\": \"Les indicateurs relatifs \\u00e0 la pr\\u00e9sence d\\u00e9crivent les variations \\u00e0 court terme du nombre de personnes pr\\u00e9sentes dans chaque zone.\"\n",
       "        },\n",
       "        {\n",
-      "            \"category_id\": \"trips\",\n",
+      "            \"category_id\": \"movements\",\n",
       "            \"type\": \"flow\",\n",
       "            \"order\": 4,\n",
       "            \"flowgeek_url\": \"https://www.flowgeek.org/methods/calculating-mobility-indicators/movement-indicators\",\n",
@@ -364,11 +364,11 @@
    "id": "11e9568f-7066-4be0-992a-5fc6a2aeb1bf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-07T12:57:32.509578Z",
-     "iopub.status.busy": "2023-02-07T12:57:32.509406Z",
-     "iopub.status.idle": "2023-02-07T12:57:32.696262Z",
-     "shell.execute_reply": "2023-02-07T12:57:32.695729Z",
-     "shell.execute_reply.started": "2023-02-07T12:57:32.509560Z"
+     "iopub.execute_input": "2023-02-09T14:45:15.141875Z",
+     "iopub.status.busy": "2023-02-09T14:45:15.141626Z",
+     "iopub.status.idle": "2023-02-09T14:45:15.355990Z",
+     "shell.execute_reply": "2023-02-09T14:45:15.355387Z",
+     "shell.execute_reply.started": "2023-02-09T14:45:15.141859Z"
     },
     "tags": []
    },
@@ -380,7 +380,7 @@
       "Saved CSV to /tmp/residents_admin3_monthly_small_preprocessed.csv\n",
       "Saved CSV to /tmp/relocations_admin3_monthly_small_preprocessed.csv\n",
       "Saved CSV to /tmp/presence_admin3_daily_small_preprocessed.csv\n",
-      "Saved CSV to /tmp/travellers_admin3_daily_small_preprocessed.csv\n"
+      "Saved CSV to /tmp/movements_admin3_daily_small_preprocessed.csv\n"
      ]
     }
    ],
@@ -388,14 +388,14 @@
     "real_data_files = {\n",
     "    \"residents\": {\"category_id\": \"residents\", \"srid\": 3, \"trid\": 2},\n",
     "    \"relocations\": {\"category_id\": \"relocations\", \"srid\": 3, \"trid\": 2},\n",
-    "    \"visitors\": {\"category_id\": \"visitors\", \"srid\": 3, \"trid\": 4},\n",
-    "    \"trips\": {\"category_id\": \"trips\", \"srid\": 3, \"trid\": 4},\n",
+    "    \"presence\": {\"category_id\": \"presence\", \"srid\": 3, \"trid\": 4},\n",
+    "    \"movements\": {\"category_id\": \"movements\", \"srid\": 3, \"trid\": 4},\n",
     "}\n",
     "synthetic_files = {\n",
     "    \"residents_admin3_monthly_small\": {\"category_id\": \"residents\", \"srid\": 3, \"trid\": 2},\n",
     "    \"relocations_admin3_monthly_small\": {\"category_id\": \"relocations\", \"srid\": 3, \"trid\": 2},\n",
-    "    \"presence_admin3_daily_small\": {\"category_id\": \"visitors\", \"srid\": 3, \"trid\": 4},\n",
-    "    \"travellers_admin3_daily_small\": {\"category_id\": \"trips\", \"srid\": 3, \"trid\": 4},\n",
+    "    \"presence_admin3_daily_small\": {\"category_id\": \"presence\", \"srid\": 3, \"trid\": 4},\n",
+    "    \"movements_admin3_daily_small\": {\"category_id\": \"movements\", \"srid\": 3, \"trid\": 4},\n",
     "}\n",
     "files = synthetic_files if SYNTHETIC else real_data_files\n",
     "\n",
@@ -410,12 +410,12 @@
     "    # make sure only rows with data are kept\n",
     "    # then sort by date, and spatial unit(s) if applicable\n",
     "    # finally rename columns\n",
-    "    if file_name in [\"residents\", \"visitors\"]:\n",
+    "    if file_name in [\"residents\", \"presence\"]:\n",
     "        # min columns: date, spatial unit, one data column\n",
     "        df = df.dropna(thresh=3)\n",
     "        df = df.sort_values(by=[df.columns[0], df.columns[1]])\n",
     "        df = df.rename(columns={df.columns[0]: \"date\", df.columns[1]: \"spatial_unit\"})\n",
-    "    elif file_name in [\"relocations\", \"trips\"]:\n",
+    "    elif file_name in [\"relocations\", \"movements\"]:\n",
     "        # min columns: date, 2 spatial units, one data column\n",
     "        df = df.dropna(thresh=4)\n",
     "        df = df.sort_values(by=[df.columns[0], df.columns[1], df.columns[2]])\n",
@@ -441,11 +441,11 @@
    "id": "766b7455-ed80-442d-bed6-dc0faa739699",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-07T12:57:32.697488Z",
-     "iopub.status.busy": "2023-02-07T12:57:32.697044Z",
-     "iopub.status.idle": "2023-02-07T12:57:32.707331Z",
-     "shell.execute_reply": "2023-02-07T12:57:32.706873Z",
-     "shell.execute_reply.started": "2023-02-07T12:57:32.697466Z"
+     "iopub.execute_input": "2023-02-09T14:45:15.357072Z",
+     "iopub.status.busy": "2023-02-09T14:45:15.356805Z",
+     "iopub.status.idle": "2023-02-09T14:45:15.369202Z",
+     "shell.execute_reply": "2023-02-09T14:45:15.368642Z",
+     "shell.execute_reply.started": "2023-02-09T14:45:15.357050Z"
     },
     "tags": []
    },
@@ -492,11 +492,11 @@
    "id": "4eb65dfb-5e73-4cb4-8cbb-0339f6d9752f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-07T12:57:32.708213Z",
-     "iopub.status.busy": "2023-02-07T12:57:32.707986Z",
-     "iopub.status.idle": "2023-02-07T12:57:55.112763Z",
-     "shell.execute_reply": "2023-02-07T12:57:55.112060Z",
-     "shell.execute_reply.started": "2023-02-07T12:57:32.708197Z"
+     "iopub.execute_input": "2023-02-09T14:45:15.370853Z",
+     "iopub.status.busy": "2023-02-09T14:45:15.370224Z",
+     "iopub.status.idle": "2023-02-09T14:45:15.384874Z",
+     "shell.execute_reply": "2023-02-09T14:45:15.384248Z",
+     "shell.execute_reply.started": "2023-02-09T14:45:15.370830Z"
     },
     "tags": []
    },
@@ -507,7 +507,7 @@
      "text": [
       "Processing file residents_admin3_monthly_small.csv\n",
       "Found 8 indicators for category residents\n",
-      "Prepared requests in 0.81s\n",
+      "Prepared requests in 0.93s\n",
       "Starting ingestion of data for 8 indicators...\n",
       "    Ingesting 6 datasets for indicator residents.residents.\n",
       "    Ingesting 6 datasets for indicator residents.residents_perKm2.\n",
@@ -517,33 +517,37 @@
       "    Ingesting 6 datasets for indicator residents.residents_diffwithref.\n",
       "    Ingesting 6 datasets for indicator residents.abnormality.\n",
       "    Ingesting 6 datasets for indicator residents.residents_pctchangewithref.\n",
-      "Ingested 48/48 datasets (100.0%) in 1.71s\n",
+      "Ingested 48/48 datasets (100.0%) in 1.85s\n",
       "Processing file relocations_admin3_monthly_small.csv\n",
       "Found 4 indicators for category relocations\n",
-      "Prepared requests in 4.05s\n",
+      "Prepared requests in 4.29s\n",
       "Starting ingestion of data for 4 indicators...\n",
       "    Ingesting 6 datasets for indicator relocations.relocations.\n",
       "    Ingesting 6 datasets for indicator relocations.relocations_diffwithref.\n",
       "    Ingesting 6 datasets for indicator relocations.abnormality.\n",
       "    Ingesting 6 datasets for indicator relocations.relocations_pctchangewithref.\n",
-      "Ingested 24/24 datasets (100.0%) in 4.57s\n",
+      "Ingested 24/24 datasets (100.0%) in 5.0s\n",
       "Processing file presence_admin3_daily_small.csv\n",
-      "Found 7 indicators for category visitors\n",
-      "Prepared requests in 0.36s\n",
-      "Starting ingestion of data for 3 indicators...\n",
-      "    Ingesting 7 datasets for indicator visitors.trips_in.\n",
-      "    Ingesting 7 datasets for indicator visitors.trips_out.\n",
-      "    Ingesting 7 datasets for indicator visitors.abnormality.\n",
-      "Ingested 21/21 datasets (100.0%) in 0.7s\n",
-      "Processing file travellers_admin3_daily_small.csv\n",
-      "Found 4 indicators for category trips\n",
-      "Prepared requests in 4.44s\n",
+      "Found 7 indicators for category presence\n",
+      "Prepared requests in 0.76s\n",
+      "Starting ingestion of data for 7 indicators...\n",
+      "    Ingesting 7 datasets for indicator presence.presence.\n",
+      "    Ingesting 7 datasets for indicator presence.presence_perKm2.\n",
+      "    Ingesting 7 datasets for indicator presence.trips_in.\n",
+      "    Ingesting 7 datasets for indicator presence.trips_out.\n",
+      "    Ingesting 7 datasets for indicator presence.abnormality.\n",
+      "    Ingesting 7 datasets for indicator presence.presence_diffwithref.\n",
+      "    Ingesting 7 datasets for indicator presence.presence_pctchangewithref.\n",
+      "Ingested 49/49 datasets (100.0%) in 1.71s\n",
+      "Processing file movements_admin3_daily_small.csv\n",
+      "Found 4 indicators for category movements\n",
+      "Prepared requests in 4.22s\n",
       "Starting ingestion of data for 4 indicators...\n",
-      "    Ingesting 7 datasets for indicator trips.travellers.\n",
-      "    Ingesting 7 datasets for indicator trips.abnormality.\n",
-      "    Ingesting 7 datasets for indicator trips.travellers_diffwithref.\n",
-      "    Ingesting 7 datasets for indicator trips.travellers_pctchangewithref.\n",
-      "Ingested 28/28 datasets (100.0%) in 5.69s\n"
+      "    Ingesting 7 datasets for indicator movements.travellers.\n",
+      "    Ingesting 7 datasets for indicator movements.abnormality.\n",
+      "    Ingesting 7 datasets for indicator movements.travellers_diffwithref.\n",
+      "    Ingesting 7 datasets for indicator movements.travellers_pctchangewithref.\n",
+      "Ingested 28/28 datasets (100.0%) in 5.01s\n"
      ]
     }
    ],
@@ -697,7 +701,10 @@
     "        #    continue\n",
     "        await ingest_data(file_name)\n",
     "\n",
-    "doit()"
+    "loop = asyncio.get_event_loop()\n",
+    "task = loop.create_task(doit())\n",
+    "if not loop.is_running():\n",
+    "    loop.run_until_complete(task)"
    ]
   },
   {
