--- a/src/jupyter/DebugAPI.ipynb
+++ b/src/jupyter/DebugAPI.ipynb
@@ -41,13 +41,13 @@
     "from dateutil import parser\n",
     "\n",
     "\n",
-    "AUDIENCE = os.getenv('AUTH0_AUDIENCE')\n",
-    "BASE_URL = os.getenv('INGESTION_BASE_URL')\n",
-    "AUTH0_DOMAIN = os.getenv('INGESTION_AUTH0_DOMAIN')\n",
-    "AUTH0_CLIENT_ID_UPDATER = os.getenv('INGESTION_AUTH0_CLIENT_ID_UPDATER')\n",
-    "AUTH0_CLIENT_SECRET_UPDATER = os.getenv('INGESTION_AUTH0_CLIENT_SECRET_UPDATER')\n",
-    "AUTH0_CLIENT_ID_ADMIN = os.getenv('INGESTION_AUTH0_CLIENT_ID_ADMIN')\n",
-    "AUTH0_CLIENT_SECRET_ADMIN = os.getenv('INGESTION_AUTH0_CLIENT_SECRET_ADMIN')\n",
+    "AUDIENCE = os.getenv(\"AUTH0_AUDIENCE\")\n",
+    "BASE_URL = os.getenv(\"INGESTION_BASE_URL\")\n",
+    "AUTH0_DOMAIN = os.getenv(\"INGESTION_AUTH0_DOMAIN\")\n",
+    "AUTH0_CLIENT_ID_UPDATER = os.getenv(\"INGESTION_AUTH0_CLIENT_ID_UPDATER\")\n",
+    "AUTH0_CLIENT_SECRET_UPDATER = os.getenv(\"INGESTION_AUTH0_CLIENT_SECRET_UPDATER\")\n",
+    "AUTH0_CLIENT_ID_ADMIN = os.getenv(\"INGESTION_AUTH0_CLIENT_ID_ADMIN\")\n",
+    "AUTH0_CLIENT_SECRET_ADMIN = os.getenv(\"INGESTION_AUTH0_CLIENT_SECRET_ADMIN\")\n",
     "\n",
     "\n",
     "def log(response):\n",
