--- a/src/jupyter/PopulateDatabase.ipynb
+++ b/src/jupyter/PopulateDatabase.ipynb
@@ -75,13 +75,13 @@
     "# whether to ingest synthetic data or real data\n",
     "SYNTHETIC = True\n",
     "\n",
-    "AUDIENCE = os.getenv('AUTH0_AUDIENCE')\n",
-    "BASE_URL = os.getenv('INGESTION_BASE_URL')\n",
-    "AUTH0_DOMAIN = os.getenv('INGESTION_AUTH0_DOMAIN')\n",
-    "AUTH0_CLIENT_ID_UPDATER = os.getenv('INGESTION_AUTH0_CLIENT_ID_UPDATER')\n",
-    "AUTH0_CLIENT_SECRET_UPDATER = os.getenv('INGESTION_AUTH0_CLIENT_SECRET_UPDATER')\n",
-    "AUTH0_CLIENT_ID_ADMIN = os.getenv('INGESTION_AUTH0_CLIENT_ID_ADMIN')\n",
-    "AUTH0_CLIENT_SECRET_ADMIN = os.getenv('INGESTION_AUTH0_CLIENT_SECRET_ADMIN')\n",
+    "AUDIENCE = os.getenv(\"AUTH0_AUDIENCE\")\n",
+    "BASE_URL = os.getenv(\"INGESTION_BASE_URL\")\n",
+    "AUTH0_DOMAIN = os.getenv(\"INGESTION_AUTH0_DOMAIN\")\n",
+    "AUTH0_CLIENT_ID_UPDATER = os.getenv(\"INGESTION_AUTH0_CLIENT_ID_UPDATER\")\n",
+    "AUTH0_CLIENT_SECRET_UPDATER = os.getenv(\"INGESTION_AUTH0_CLIENT_SECRET_UPDATER\")\n",
+    "AUTH0_CLIENT_ID_ADMIN = os.getenv(\"INGESTION_AUTH0_CLIENT_ID_ADMIN\")\n",
+    "AUTH0_CLIENT_SECRET_ADMIN = os.getenv(\"INGESTION_AUTH0_CLIENT_SECRET_ADMIN\")\n",
     "\n",
     "\n",
     "def log(response):\n",
@@ -694,12 +694,12 @@
     "        )\n",
     "\n",
     "\n",
-    "        \n",
     "async def doit():\n",
     "    for file_name in files.keys():\n",
     "        # if file_name != 'residents':\n",
     "        #    continue\n",
     "        await ingest_data(file_name)\n",
+    "\n",
     "\n",
     "loop = asyncio.get_event_loop()\n",
     "task = loop.create_task(doit())\n",
