added scope mapping support to query endpoint and worked on notebook

--- a/src/jupyter/PopulateDatabase.ipynb
+++ b/src/jupyter/PopulateDatabase.ipynb
@@ -31,11 +31,11 @@
    "id": "92716416-e32a-4944-9af2-23b9ac53d576",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-09T14:45:11.280105Z",
-     "iopub.status.busy": "2023-02-09T14:45:11.279757Z",
-     "iopub.status.idle": "2023-02-09T14:45:11.653072Z",
-     "shell.execute_reply": "2023-02-09T14:45:11.652280Z",
-     "shell.execute_reply.started": "2023-02-09T14:45:11.280056Z"
+     "iopub.execute_input": "2023-03-17T15:23:45.820275Z",
+     "iopub.status.busy": "2023-03-17T15:23:45.820072Z",
+     "iopub.status.idle": "2023-03-17T15:23:46.254548Z",
+     "shell.execute_reply": "2023-03-17T15:23:46.253849Z",
+     "shell.execute_reply.started": "2023-03-17T15:23:45.820232Z"
     },
     "tags": []
    },
@@ -46,15 +46,15 @@
      "text": [
       "Welcome to flowkit-ui-backend!\n",
       "{\n",
-      "    \"datetime\": \"2023-02-09T14:45:11.648154+00:00\",\n",
-      "    \"docker_image\": \"flowminder/flowkit-ui-backend:02743dc\",\n",
-      "    \"git_branch\": \"feature-auto-ingestion\",\n",
-      "    \"git_commit\": \"02743dc\",\n",
+      "    \"datetime\": \"2023-03-17T15:23:46.249913+00:00\",\n",
+      "    \"docker_image\": \"flowminder/flowkit-ui-backend:890c0e0\",\n",
+      "    \"git_branch\": \"feature-scope-mapping\",\n",
+      "    \"git_commit\": \"890c0e0\",\n",
       "    \"git_tag\": null,\n",
       "    \"python_package\": \"flowkit-ui-backend\",\n",
       "    \"python_version\": \"3.9.15\",\n",
-      "    \"api_version\": \"1.2.1\",\n",
-      "    \"api_version_url_appendix\": \"v1\"\n",
+      "    \"api_version_url_appendix\": \"v1\",\n",
+      "    \"api_version\": \"1.2.1\"\n",
       "}\n"
      ]
     }
@@ -116,11 +116,11 @@
    "id": "fc4b2bfe-8ec6-4d6e-80d8-d1a047d0a185",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-09T14:45:11.654357Z",
-     "iopub.status.busy": "2023-02-09T14:45:11.653666Z",
-     "iopub.status.idle": "2023-02-09T14:45:12.390798Z",
-     "shell.execute_reply": "2023-02-09T14:45:12.390097Z",
-     "shell.execute_reply.started": "2023-02-09T14:45:11.654324Z"
+     "iopub.execute_input": "2023-03-17T15:23:48.351557Z",
+     "iopub.status.busy": "2023-03-17T15:23:48.351220Z",
+     "iopub.status.idle": "2023-03-17T15:23:49.554108Z",
+     "shell.execute_reply": "2023-03-17T15:23:49.553565Z",
+     "shell.execute_reply.started": "2023-03-17T15:23:48.351530Z"
     },
     "tags": []
    },
@@ -169,11 +169,11 @@
    "id": "19a726e7-34fc-4625-890c-4ab07e76c638",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-09T14:45:12.392145Z",
-     "iopub.status.busy": "2023-02-09T14:45:12.391820Z",
-     "iopub.status.idle": "2023-02-09T14:45:12.745898Z",
-     "shell.execute_reply": "2023-02-09T14:45:12.745331Z",
-     "shell.execute_reply.started": "2023-02-09T14:45:12.392115Z"
+     "iopub.execute_input": "2023-03-17T15:23:51.313094Z",
+     "iopub.status.busy": "2023-03-17T15:23:51.312852Z",
+     "iopub.status.idle": "2023-03-17T15:23:51.737572Z",
+     "shell.execute_reply": "2023-03-17T15:23:51.737064Z",
+     "shell.execute_reply.started": "2023-03-17T15:23:51.313081Z"
     },
     "tags": []
    },
@@ -222,11 +222,11 @@
    "id": "5de63f9f-22e7-430a-9865-b0eb69dd3a23",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-09T14:45:12.747455Z",
-     "iopub.status.busy": "2023-02-09T14:45:12.747196Z",
-     "iopub.status.idle": "2023-02-09T14:45:15.122933Z",
-     "shell.execute_reply": "2023-02-09T14:45:15.122244Z",
-     "shell.execute_reply.started": "2023-02-09T14:45:12.747438Z"
+     "iopub.execute_input": "2023-03-17T15:23:54.545967Z",
+     "iopub.status.busy": "2023-03-17T15:23:54.545764Z",
+     "iopub.status.idle": "2023-03-17T15:23:56.950909Z",
+     "shell.execute_reply": "2023-03-17T15:23:56.950090Z",
+     "shell.execute_reply.started": "2023-03-17T15:23:54.545951Z"
     },
     "tags": []
    },
@@ -273,11 +273,11 @@
    "id": "a3971755-2d36-44c4-a36a-f2d612fd2642",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-09T14:45:15.123983Z",
-     "iopub.status.busy": "2023-02-09T14:45:15.123669Z",
-     "iopub.status.idle": "2023-02-09T14:45:15.140928Z",
-     "shell.execute_reply": "2023-02-09T14:45:15.140347Z",
-     "shell.execute_reply.started": "2023-02-09T14:45:15.123965Z"
+     "iopub.execute_input": "2023-03-17T15:23:59.523702Z",
+     "iopub.status.busy": "2023-03-17T15:23:59.523486Z",
+     "iopub.status.idle": "2023-03-17T15:23:59.539345Z",
+     "shell.execute_reply": "2023-03-17T15:23:59.538752Z",
+     "shell.execute_reply.started": "2023-03-17T15:23:59.523687Z"
     },
     "tags": []
    },
@@ -364,11 +364,11 @@
    "id": "11e9568f-7066-4be0-992a-5fc6a2aeb1bf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-09T14:45:15.141875Z",
-     "iopub.status.busy": "2023-02-09T14:45:15.141626Z",
-     "iopub.status.idle": "2023-02-09T14:45:15.355990Z",
-     "shell.execute_reply": "2023-02-09T14:45:15.355387Z",
-     "shell.execute_reply.started": "2023-02-09T14:45:15.141859Z"
+     "iopub.execute_input": "2023-03-17T15:24:03.097999Z",
+     "iopub.status.busy": "2023-03-17T15:24:03.097823Z",
+     "iopub.status.idle": "2023-03-17T15:24:03.283638Z",
+     "shell.execute_reply": "2023-03-17T15:24:03.282830Z",
+     "shell.execute_reply.started": "2023-03-17T15:24:03.097987Z"
     },
     "tags": []
    },
@@ -441,11 +441,11 @@
    "id": "766b7455-ed80-442d-bed6-dc0faa739699",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-09T14:45:15.357072Z",
-     "iopub.status.busy": "2023-02-09T14:45:15.356805Z",
-     "iopub.status.idle": "2023-02-09T14:45:15.369202Z",
-     "shell.execute_reply": "2023-02-09T14:45:15.368642Z",
-     "shell.execute_reply.started": "2023-02-09T14:45:15.357050Z"
+     "iopub.execute_input": "2023-03-17T15:24:05.076536Z",
+     "iopub.status.busy": "2023-03-17T15:24:05.076259Z",
+     "iopub.status.idle": "2023-03-17T15:24:05.086435Z",
+     "shell.execute_reply": "2023-03-17T15:24:05.085937Z",
+     "shell.execute_reply.started": "2023-03-17T15:24:05.076521Z"
     },
     "tags": []
    },
@@ -481,7 +481,9 @@
    "id": "7b3d0db6-9296-431b-a9aa-a22c6a1c360e",
    "metadata": {},
    "source": [
-    "## Now we can load the data we want to ingest.\n",
+    "## Data ingestion\n",
+    "\n",
+    "Now we can load the data we want to ingest.\n",
     "We need to process the CSV files, which contain all indicators and dates for one category but the API ingests data in smaller chunks (one API call per indicator per date).\n",
     "It's still recommended to compress the request body using `gzip`."
    ]
@@ -492,11 +494,11 @@
    "id": "4eb65dfb-5e73-4cb4-8cbb-0339f6d9752f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-09T14:45:15.370853Z",
-     "iopub.status.busy": "2023-02-09T14:45:15.370224Z",
-     "iopub.status.idle": "2023-02-09T14:45:15.384874Z",
-     "shell.execute_reply": "2023-02-09T14:45:15.384248Z",
-     "shell.execute_reply.started": "2023-02-09T14:45:15.370830Z"
+     "iopub.execute_input": "2023-03-17T15:24:06.964178Z",
+     "iopub.status.busy": "2023-03-17T15:24:06.963903Z",
+     "iopub.status.idle": "2023-03-17T15:24:27.616547Z",
+     "shell.execute_reply": "2023-03-17T15:24:27.615909Z",
+     "shell.execute_reply.started": "2023-03-17T15:24:06.964161Z"
     },
     "tags": []
    },
@@ -507,7 +509,7 @@
      "text": [
       "Processing file residents_admin3_monthly_small.csv\n",
       "Found 8 indicators for category residents\n",
-      "Prepared requests in 0.93s\n",
+      "Prepared requests in 0.72s\n",
       "Starting ingestion of data for 8 indicators...\n",
       "    Ingesting 6 datasets for indicator residents.residents.\n",
       "    Ingesting 6 datasets for indicator residents.residents_perKm2.\n",
@@ -517,19 +519,19 @@
       "    Ingesting 6 datasets for indicator residents.residents_diffwithref.\n",
       "    Ingesting 6 datasets for indicator residents.abnormality.\n",
       "    Ingesting 6 datasets for indicator residents.residents_pctchangewithref.\n",
-      "Ingested 48/48 datasets (100.0%) in 1.85s\n",
+      "Ingested 48/48 datasets (100.0%) in 1.71s\n",
       "Processing file relocations_admin3_monthly_small.csv\n",
       "Found 4 indicators for category relocations\n",
-      "Prepared requests in 4.29s\n",
+      "Prepared requests in 3.52s\n",
       "Starting ingestion of data for 4 indicators...\n",
       "    Ingesting 6 datasets for indicator relocations.relocations.\n",
       "    Ingesting 6 datasets for indicator relocations.relocations_diffwithref.\n",
       "    Ingesting 6 datasets for indicator relocations.abnormality.\n",
       "    Ingesting 6 datasets for indicator relocations.relocations_pctchangewithref.\n",
-      "Ingested 24/24 datasets (100.0%) in 5.0s\n",
+      "Ingested 24/24 datasets (100.0%) in 4.51s\n",
       "Processing file presence_admin3_daily_small.csv\n",
       "Found 7 indicators for category presence\n",
-      "Prepared requests in 0.76s\n",
+      "Prepared requests in 0.63s\n",
       "Starting ingestion of data for 7 indicators...\n",
       "    Ingesting 7 datasets for indicator presence.presence.\n",
       "    Ingesting 7 datasets for indicator presence.presence_perKm2.\n",
@@ -538,16 +540,16 @@
       "    Ingesting 7 datasets for indicator presence.abnormality.\n",
       "    Ingesting 7 datasets for indicator presence.presence_diffwithref.\n",
       "    Ingesting 7 datasets for indicator presence.presence_pctchangewithref.\n",
-      "Ingested 49/49 datasets (100.0%) in 1.71s\n",
+      "Ingested 49/49 datasets (100.0%) in 1.63s\n",
       "Processing file movements_admin3_daily_small.csv\n",
       "Found 4 indicators for category movements\n",
-      "Prepared requests in 4.22s\n",
+      "Prepared requests in 3.42s\n",
       "Starting ingestion of data for 4 indicators...\n",
       "    Ingesting 7 datasets for indicator movements.travellers.\n",
       "    Ingesting 7 datasets for indicator movements.abnormality.\n",
       "    Ingesting 7 datasets for indicator movements.travellers_diffwithref.\n",
       "    Ingesting 7 datasets for indicator movements.travellers_pctchangewithref.\n",
-      "Ingested 28/28 datasets (100.0%) in 5.01s\n"
+      "Ingested 28/28 datasets (100.0%) in 4.41s\n"
      ]
     }
    ],
@@ -700,11 +702,11 @@
     "        #    continue\n",
     "        await ingest_data(file_name)\n",
     "\n",
-    "\n",
-    "loop = asyncio.get_event_loop()\n",
-    "task = loop.create_task(doit())\n",
-    "if not loop.is_running():\n",
-    "    loop.run_until_complete(task)"
+    "await doit()\n",
+    "#loop = asyncio.get_event_loop()\n",
+    "#task = loop.create_task(doit())\n",
+    "#if not loop.is_running():\n",
+    "#    loop.run_until_complete(task)"
    ]
   },
   {
@@ -713,6 +715,177 @@
    "metadata": {},
    "source": [
     "Done! Provided you got all `201` or `204` responses (i.e. no errors), the data should now be in the database!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e909784-5a22-4105-93da-48644986ede8",
+   "metadata": {},
+   "source": [
+    "## Data permissions & access\n",
+    "\n",
+    "The data is now in the database, but without access management, only administrators will be able to see the data by default.\n",
+    "To enable access by users depending on their roles, we need to define what scopes give access to which part of the data.\n",
+    "We use an \"allow-list\" style access management so we have to define each bit of data that will be accessible to users that aren't admins.\n",
+    "We do that using JSON. Each key is the name of a scope as defined in Auth0 (see also the API spec) and each value is a set of queries (as per API spec) that define a set of data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "90ef4661-f5c1-485e-8600-59ec1a346bdd",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-03-17T15:24:52.784057Z",
+     "iopub.status.busy": "2023-03-17T15:24:52.783878Z",
+     "iopub.status.idle": "2023-03-17T15:24:52.787592Z",
+     "shell.execute_reply": "2023-03-17T15:24:52.787176Z",
+     "shell.execute_reply.started": "2023-03-17T15:24:52.784043Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "data_access = {\n",
+    "    \"read:free_data\": [\n",
+    "        {\n",
+    "            \"category_id\": \"residents\",\n",
+    "            \"indicator_id\": \"residents.residents\",\n",
+    "            \"srid\": 3,\n",
+    "            \"trid\": 2,\n",
+    "            \"start_date\": \"2020-02\",\n",
+    "            \"duration\": 3\n",
+    "        }\n",
+    "    ],\n",
+    "    \"read:premium_data\": [\n",
+    "        {\n",
+    "            \"category_id\": \"residents\",\n",
+    "            \"indicator_id\": \"residents.residents\",\n",
+    "            \"srid\": 3,\n",
+    "            \"trid\": 2,\n",
+    "            \"start_date\": \"2020-02\",\n",
+    "            \"duration\": 6\n",
+    "        },\n",
+    "        {\n",
+    "            \"category_id\": \"residents\",\n",
+    "            \"indicator_id\": \"residents.residents_perKm2\",\n",
+    "            \"srid\": 3,\n",
+    "            \"trid\": 2,\n",
+    "            \"start_date\": \"2020-02\",\n",
+    "            \"duration\": 6\n",
+    "        }\n",
+    "    ]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b69ac8e8-0491-4b76-a54b-58cf8c03fccb",
+   "metadata": {},
+   "source": [
+    "Now we need to get the metadata IDs of the specified data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "85442e50-590c-4665-b45c-eb1579486aab",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-03-17T15:31:55.868649Z",
+     "iopub.status.busy": "2023-03-17T15:31:55.867919Z",
+     "iopub.status.idle": "2023-03-17T15:31:55.941132Z",
+     "shell.execute_reply": "2023-03-17T15:31:55.940549Z",
+     "shell.execute_reply.started": "2023-03-17T15:31:55.868616Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'read:free_data': ['3', '1', '4'], 'read:premium_data': ['3', '1', '4', '2', '5', '6', '9', '10', '7', '11', '12', '8']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "scope_mappings = {}\n",
+    "for scope in data_access:\n",
+    "    scope_mappings[scope] = []\n",
+    "    for query in data_access[scope]:\n",
+    "        query['mdids_only'] = True\n",
+    "        response = httpx.post(\n",
+    "            url=f\"{BASE_URL}/query\",\n",
+    "            headers={\n",
+    "                \"Content-Type\": \"application/json\",\n",
+    "                \"Content-Encoding\": \"gzip\",\n",
+    "                \"Authorization\": f\"Bearer {admin_token}\",\n",
+    "            },\n",
+    "            data=gzip.compress(json.dumps(query).encode(\"utf-8\")),\n",
+    "        )\n",
+    "        scope_mappings[scope] += json.loads(response.content)[\"mdids\"]\n",
+    "print(scope_mappings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3af944e3-0e61-4181-8925-01d0a400c446",
+   "metadata": {},
+   "source": [
+    "Next we can ingest the scope mappings using the `/scope_mapping` endpoint:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "de822c81-fca9-4504-b8f1-1c91504855fe",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-03-17T15:35:52.813406Z",
+     "iopub.status.busy": "2023-03-17T15:35:52.813193Z",
+     "iopub.status.idle": "2023-03-17T15:35:53.465410Z",
+     "shell.execute_reply": "2023-03-17T15:35:53.464659Z",
+     "shell.execute_reply.started": "2023-03-17T15:35:52.813390Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for scope in scope_mappings:\n",
+    "    for mdid in scope_mappings[scope]:\n",
+    "        scope_mapping = {\n",
+    "            \"scope\": scope,\n",
+    "            \"mdid\": mdid\n",
+    "        }\n",
+    "        response = httpx.post(\n",
+    "            url=f\"{BASE_URL}/scope_mapping\",\n",
+    "            headers={\n",
+    "                \"Content-Type\": \"application/json\",\n",
+    "                \"Content-Encoding\": \"gzip\",\n",
+    "                \"Authorization\": f\"Bearer {admin_token}\",\n",
+    "            },\n",
+    "            data=gzip.compress(json.dumps(scope_mapping).encode(\"utf-8\")),\n",
+    "        )\n",
+    "        if response.status_code != 204:\n",
+    "            log(response)\n",
+    "print(\"Done.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0360f81a-a785-4e69-8a06-203d712fb526",
+   "metadata": {},
+   "source": [
+    "If not status codes other than `204` come back, then the ingestion of scope mappings worked and the data is now tagged."
    ]
   }
  ],
