--- a/src/jupyter/PopulateDatabase.ipynb
+++ b/src/jupyter/PopulateDatabase.ipynb
@@ -31,11 +31,11 @@
    "id": "92716416-e32a-4944-9af2-23b9ac53d576",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-17T15:23:45.820275Z",
-     "iopub.status.busy": "2023-03-17T15:23:45.820072Z",
-     "iopub.status.idle": "2023-03-17T15:23:46.254548Z",
-     "shell.execute_reply": "2023-03-17T15:23:46.253849Z",
-     "shell.execute_reply.started": "2023-03-17T15:23:45.820232Z"
+     "iopub.execute_input": "2023-03-20T12:48:01.774830Z",
+     "iopub.status.busy": "2023-03-20T12:48:01.774489Z",
+     "iopub.status.idle": "2023-03-20T12:48:02.229789Z",
+     "shell.execute_reply": "2023-03-20T12:48:02.229117Z",
+     "shell.execute_reply.started": "2023-03-20T12:48:01.774776Z"
     },
     "tags": []
    },
@@ -46,7 +46,7 @@
      "text": [
       "Welcome to flowkit-ui-backend!\n",
       "{\n",
-      "    \"datetime\": \"2023-03-17T15:23:46.249913+00:00\",\n",
+      "    \"datetime\": \"2023-03-20T12:48:02.225106+00:00\",\n",
       "    \"docker_image\": \"flowminder/flowkit-ui-backend:890c0e0\",\n",
       "    \"git_branch\": \"feature-scope-mapping\",\n",
       "    \"git_commit\": \"890c0e0\",\n",
@@ -116,11 +116,11 @@
    "id": "fc4b2bfe-8ec6-4d6e-80d8-d1a047d0a185",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-17T15:23:48.351557Z",
-     "iopub.status.busy": "2023-03-17T15:23:48.351220Z",
-     "iopub.status.idle": "2023-03-17T15:23:49.554108Z",
-     "shell.execute_reply": "2023-03-17T15:23:49.553565Z",
-     "shell.execute_reply.started": "2023-03-17T15:23:48.351530Z"
+     "iopub.execute_input": "2023-03-20T12:48:04.419141Z",
+     "iopub.status.busy": "2023-03-20T12:48:04.418755Z",
+     "iopub.status.idle": "2023-03-20T12:48:05.273750Z",
+     "shell.execute_reply": "2023-03-20T12:48:05.273262Z",
+     "shell.execute_reply.started": "2023-03-20T12:48:04.419109Z"
     },
     "tags": []
    },
@@ -169,11 +169,11 @@
    "id": "19a726e7-34fc-4625-890c-4ab07e76c638",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-17T15:23:51.313094Z",
-     "iopub.status.busy": "2023-03-17T15:23:51.312852Z",
-     "iopub.status.idle": "2023-03-17T15:23:51.737572Z",
-     "shell.execute_reply": "2023-03-17T15:23:51.737064Z",
-     "shell.execute_reply.started": "2023-03-17T15:23:51.313081Z"
+     "iopub.execute_input": "2023-03-20T12:48:06.584818Z",
+     "iopub.status.busy": "2023-03-20T12:48:06.584581Z",
+     "iopub.status.idle": "2023-03-20T12:48:06.874410Z",
+     "shell.execute_reply": "2023-03-20T12:48:06.873615Z",
+     "shell.execute_reply.started": "2023-03-20T12:48:06.584799Z"
     },
     "tags": []
    },
@@ -222,11 +222,11 @@
    "id": "5de63f9f-22e7-430a-9865-b0eb69dd3a23",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-17T15:23:54.545967Z",
-     "iopub.status.busy": "2023-03-17T15:23:54.545764Z",
-     "iopub.status.idle": "2023-03-17T15:23:56.950909Z",
-     "shell.execute_reply": "2023-03-17T15:23:56.950090Z",
-     "shell.execute_reply.started": "2023-03-17T15:23:54.545951Z"
+     "iopub.execute_input": "2023-03-20T12:48:08.653418Z",
+     "iopub.status.busy": "2023-03-20T12:48:08.653215Z",
+     "iopub.status.idle": "2023-03-20T12:48:11.872822Z",
+     "shell.execute_reply": "2023-03-20T12:48:11.872075Z",
+     "shell.execute_reply.started": "2023-03-20T12:48:08.653403Z"
     },
     "tags": []
    },
@@ -273,11 +273,11 @@
    "id": "a3971755-2d36-44c4-a36a-f2d612fd2642",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-17T15:23:59.523702Z",
-     "iopub.status.busy": "2023-03-17T15:23:59.523486Z",
-     "iopub.status.idle": "2023-03-17T15:23:59.539345Z",
-     "shell.execute_reply": "2023-03-17T15:23:59.538752Z",
-     "shell.execute_reply.started": "2023-03-17T15:23:59.523687Z"
+     "iopub.execute_input": "2023-03-20T12:48:13.449918Z",
+     "iopub.status.busy": "2023-03-20T12:48:13.449631Z",
+     "iopub.status.idle": "2023-03-20T12:48:13.470302Z",
+     "shell.execute_reply": "2023-03-20T12:48:13.469341Z",
+     "shell.execute_reply.started": "2023-03-20T12:48:13.449899Z"
     },
     "tags": []
    },
@@ -364,11 +364,11 @@
    "id": "11e9568f-7066-4be0-992a-5fc6a2aeb1bf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-17T15:24:03.097999Z",
-     "iopub.status.busy": "2023-03-17T15:24:03.097823Z",
-     "iopub.status.idle": "2023-03-17T15:24:03.283638Z",
-     "shell.execute_reply": "2023-03-17T15:24:03.282830Z",
-     "shell.execute_reply.started": "2023-03-17T15:24:03.097987Z"
+     "iopub.execute_input": "2023-03-20T12:48:16.820959Z",
+     "iopub.status.busy": "2023-03-20T12:48:16.820590Z",
+     "iopub.status.idle": "2023-03-20T12:48:17.025361Z",
+     "shell.execute_reply": "2023-03-20T12:48:17.024752Z",
+     "shell.execute_reply.started": "2023-03-20T12:48:16.820925Z"
     },
     "tags": []
    },
@@ -441,11 +441,11 @@
    "id": "766b7455-ed80-442d-bed6-dc0faa739699",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-17T15:24:05.076536Z",
-     "iopub.status.busy": "2023-03-17T15:24:05.076259Z",
-     "iopub.status.idle": "2023-03-17T15:24:05.086435Z",
-     "shell.execute_reply": "2023-03-17T15:24:05.085937Z",
-     "shell.execute_reply.started": "2023-03-17T15:24:05.076521Z"
+     "iopub.execute_input": "2023-03-20T12:48:31.746606Z",
+     "iopub.status.busy": "2023-03-20T12:48:31.746422Z",
+     "iopub.status.idle": "2023-03-20T12:48:31.760791Z",
+     "shell.execute_reply": "2023-03-20T12:48:31.760105Z",
+     "shell.execute_reply.started": "2023-03-20T12:48:31.746592Z"
     },
     "tags": []
    },
@@ -494,11 +494,11 @@
    "id": "4eb65dfb-5e73-4cb4-8cbb-0339f6d9752f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-17T15:24:06.964178Z",
-     "iopub.status.busy": "2023-03-17T15:24:06.963903Z",
-     "iopub.status.idle": "2023-03-17T15:24:27.616547Z",
-     "shell.execute_reply": "2023-03-17T15:24:27.615909Z",
-     "shell.execute_reply.started": "2023-03-17T15:24:06.964161Z"
+     "iopub.execute_input": "2023-03-20T12:48:37.960616Z",
+     "iopub.status.busy": "2023-03-20T12:48:37.960227Z",
+     "iopub.status.idle": "2023-03-20T12:49:04.574392Z",
+     "shell.execute_reply": "2023-03-20T12:49:04.573758Z",
+     "shell.execute_reply.started": "2023-03-20T12:48:37.960507Z"
     },
     "tags": []
    },
@@ -519,19 +519,19 @@
       "    Ingesting 6 datasets for indicator residents.residents_diffwithref.\n",
       "    Ingesting 6 datasets for indicator residents.abnormality.\n",
       "    Ingesting 6 datasets for indicator residents.residents_pctchangewithref.\n",
-      "Ingested 48/48 datasets (100.0%) in 1.71s\n",
+      "Ingested 48/48 datasets (100.0%) in 1.93s\n",
       "Processing file relocations_admin3_monthly_small.csv\n",
       "Found 4 indicators for category relocations\n",
-      "Prepared requests in 3.52s\n",
+      "Prepared requests in 4.98s\n",
       "Starting ingestion of data for 4 indicators...\n",
       "    Ingesting 6 datasets for indicator relocations.relocations.\n",
       "    Ingesting 6 datasets for indicator relocations.relocations_diffwithref.\n",
       "    Ingesting 6 datasets for indicator relocations.abnormality.\n",
       "    Ingesting 6 datasets for indicator relocations.relocations_pctchangewithref.\n",
-      "Ingested 24/24 datasets (100.0%) in 4.51s\n",
+      "Ingested 24/24 datasets (100.0%) in 5.63s\n",
       "Processing file presence_admin3_daily_small.csv\n",
       "Found 7 indicators for category presence\n",
-      "Prepared requests in 0.63s\n",
+      "Prepared requests in 0.88s\n",
       "Starting ingestion of data for 7 indicators...\n",
       "    Ingesting 7 datasets for indicator presence.presence.\n",
       "    Ingesting 7 datasets for indicator presence.presence_perKm2.\n",
@@ -540,16 +540,16 @@
       "    Ingesting 7 datasets for indicator presence.abnormality.\n",
       "    Ingesting 7 datasets for indicator presence.presence_diffwithref.\n",
       "    Ingesting 7 datasets for indicator presence.presence_pctchangewithref.\n",
-      "Ingested 49/49 datasets (100.0%) in 1.63s\n",
+      "Ingested 49/49 datasets (100.0%) in 1.83s\n",
       "Processing file movements_admin3_daily_small.csv\n",
       "Found 4 indicators for category movements\n",
-      "Prepared requests in 3.42s\n",
+      "Prepared requests in 4.98s\n",
       "Starting ingestion of data for 4 indicators...\n",
       "    Ingesting 7 datasets for indicator movements.travellers.\n",
       "    Ingesting 7 datasets for indicator movements.abnormality.\n",
       "    Ingesting 7 datasets for indicator movements.travellers_diffwithref.\n",
       "    Ingesting 7 datasets for indicator movements.travellers_pctchangewithref.\n",
-      "Ingested 28/28 datasets (100.0%) in 4.41s\n"
+      "Ingested 28/28 datasets (100.0%) in 5.57s\n"
      ]
     }
    ],
@@ -732,15 +732,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "90ef4661-f5c1-485e-8600-59ec1a346bdd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-17T15:24:52.784057Z",
-     "iopub.status.busy": "2023-03-17T15:24:52.783878Z",
-     "iopub.status.idle": "2023-03-17T15:24:52.787592Z",
-     "shell.execute_reply": "2023-03-17T15:24:52.787176Z",
-     "shell.execute_reply.started": "2023-03-17T15:24:52.784043Z"
+     "iopub.execute_input": "2023-03-20T12:58:57.148578Z",
+     "iopub.status.busy": "2023-03-20T12:58:57.148318Z",
+     "iopub.status.idle": "2023-03-20T12:58:57.151690Z",
+     "shell.execute_reply": "2023-03-20T12:58:57.151203Z",
+     "shell.execute_reply.started": "2023-03-20T12:58:57.148558Z"
     },
     "tags": []
    },
@@ -788,15 +788,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "85442e50-590c-4665-b45c-eb1579486aab",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-17T15:31:55.868649Z",
-     "iopub.status.busy": "2023-03-17T15:31:55.867919Z",
-     "iopub.status.idle": "2023-03-17T15:31:55.941132Z",
-     "shell.execute_reply": "2023-03-17T15:31:55.940549Z",
-     "shell.execute_reply.started": "2023-03-17T15:31:55.868616Z"
+     "iopub.execute_input": "2023-03-20T12:59:04.220590Z",
+     "iopub.status.busy": "2023-03-20T12:59:04.220362Z",
+     "iopub.status.idle": "2023-03-20T12:59:04.594697Z",
+     "shell.execute_reply": "2023-03-20T12:59:04.594130Z",
+     "shell.execute_reply.started": "2023-03-20T12:59:04.220574Z"
     },
     "tags": []
    },
@@ -805,7 +805,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'read:free_data': ['3', '1', '4'], 'read:premium_data': ['3', '1', '4', '2', '5', '6', '9', '10', '7', '11', '12', '8']}\n"
+      "{'read:free_data': ['4', '2', '3'], 'read:premium_data': ['4', '2', '3', '1', '6', '5', '7', '10', '12', '8', '11', '9']}\n"
      ]
     }
    ],
@@ -838,15 +838,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "de822c81-fca9-4504-b8f1-1c91504855fe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-17T15:35:52.813406Z",
-     "iopub.status.busy": "2023-03-17T15:35:52.813193Z",
-     "iopub.status.idle": "2023-03-17T15:35:53.465410Z",
-     "shell.execute_reply": "2023-03-17T15:35:53.464659Z",
-     "shell.execute_reply.started": "2023-03-17T15:35:52.813390Z"
+     "iopub.execute_input": "2023-03-20T14:41:04.091123Z",
+     "iopub.status.busy": "2023-03-20T14:41:04.090927Z",
+     "iopub.status.idle": "2023-03-20T14:41:04.277111Z",
+     "shell.execute_reply": "2023-03-20T14:41:04.276472Z",
+     "shell.execute_reply.started": "2023-03-20T14:41:04.091108Z"
     },
     "tags": []
    },
@@ -875,7 +875,7 @@
     "            },\n",
     "            data=gzip.compress(json.dumps(scope_mapping).encode(\"utf-8\")),\n",
     "        )\n",
-    "        if response.status_code != 204:\n",
+    "        if response.status_code not in [201, 204]:\n",
     "            log(response)\n",
     "print(\"Done.\")"
    ]
@@ -885,7 +885,23 @@
    "id": "0360f81a-a785-4e69-8a06-203d712fb526",
    "metadata": {},
    "source": [
-    "If not status codes other than `204` come back, then the ingestion of scope mappings worked and the data is now tagged."
+    "If not status codes other than `204` come back, then the ingestion of scope mappings worked and the data is now tagged.\n",
+    "\n",
+    "Note that to delete data, you need to use the `httpx.request()` method as in the example below.\n",
+    "The reason is that the `httpx.delete()` method does not support a body although the spec does not explicitly forbid it.\n",
+    "\n",
+    "```python\n",
+    "response = httpx.request(\n",
+    "    url=f\"{BASE_URL}/scope_mapping\",\n",
+    "    method=\"DELETE\",\n",
+    "    headers={\n",
+    "        \"Content-Type\": \"application/json\",\n",
+    "        \"Content-Encoding\": \"gzip\",\n",
+    "        \"Authorization\": f\"Bearer {admin_token}\",\n",
+    "    },\n",
+    "    data=gzip.compress(json.dumps(scope_mapping).encode(\"utf-8\")),\n",
+    ")\n",
+    "```"
    ]
   }
  ],
@@ -905,7 +921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
