--- a/src/jupyter/PopulateDatabase.ipynb
+++ b/src/jupyter/PopulateDatabase.ipynb
@@ -702,10 +702,11 @@
     "        #    continue\n",
     "        await ingest_data(file_name)\n",
     "\n",
+    "\n",
     "await doit()\n",
-    "#loop = asyncio.get_event_loop()\n",
-    "#task = loop.create_task(doit())\n",
-    "#if not loop.is_running():\n",
+    "# loop = asyncio.get_event_loop()\n",
+    "# task = loop.create_task(doit())\n",
+    "# if not loop.is_running():\n",
     "#    loop.run_until_complete(task)"
    ]
   },
@@ -754,7 +755,7 @@
     "            \"srid\": 3,\n",
     "            \"trid\": 2,\n",
     "            \"start_date\": \"2020-02\",\n",
-    "            \"duration\": 3\n",
+    "            \"duration\": 3,\n",
     "        }\n",
     "    ],\n",
     "    \"read:premium_data\": [\n",
@@ -764,7 +765,7 @@
     "            \"srid\": 3,\n",
     "            \"trid\": 2,\n",
     "            \"start_date\": \"2020-02\",\n",
-    "            \"duration\": 6\n",
+    "            \"duration\": 6,\n",
     "        },\n",
     "        {\n",
     "            \"category_id\": \"residents\",\n",
@@ -772,9 +773,9 @@
     "            \"srid\": 3,\n",
     "            \"trid\": 2,\n",
     "            \"start_date\": \"2020-02\",\n",
-    "            \"duration\": 6\n",
-    "        }\n",
-    "    ]\n",
+    "            \"duration\": 6,\n",
+    "        },\n",
+    "    ],\n",
     "}"
    ]
   },
@@ -814,7 +815,7 @@
     "for scope in data_access:\n",
     "    scope_mappings[scope] = []\n",
     "    for query in data_access[scope]:\n",
-    "        query['mdids_only'] = True\n",
+    "        query[\"mdids_only\"] = True\n",
     "        response = httpx.post(\n",
     "            url=f\"{BASE_URL}/query\",\n",
     "            headers={\n",
@@ -862,10 +863,7 @@
    "source": [
     "for scope in scope_mappings:\n",
     "    for mdid in scope_mappings[scope]:\n",
-    "        scope_mapping = {\n",
-    "            \"scope\": scope,\n",
-    "            \"mdid\": mdid\n",
-    "        }\n",
+    "        scope_mapping = {\"scope\": scope, \"mdid\": mdid}\n",
     "        response = httpx.post(\n",
     "            url=f\"{BASE_URL}/scope_mapping\",\n",
     "            headers={\n",
